added swedish and romanian languages

--- a/languages/french.json
+++ b/languages/french.json
@@ -90,12 +90,14 @@
     "help": [
       "Commandes de SteamBot: (Si une commande ne fonctionne pas, essayez d'ajouter *, par exemple -> steam user*)",
       "   steam premium                        - Informations sur les utilisateurs premium de SteamBot",
+      "   steam guide ",
       "   steam help other                     - Affiche une liste de diverses commandes",
       "   steam game [nom]                     - Cherche un jeu sur Steam",
       "   steam games [nom]                    - Liste tous les jeux correspondant à 'nom'",
       "   steam watch help                     - Aide à propos de la commande 'watch' (premium only)",
       "   steam user [nom]                     - Cherche un utilisateur sur Steam",
       "   steam users [nom]                    - Affiche une liste d'utilisateurs correspondants à 'nom'",
+      "   steam avatar [name]          - gets a user's avatar",
       "   steam item [jeu] \"item\"            - Cherche les informations à propos d'un jeu",
       "   steam library [nom]                  - Cherche la librairie d'un joueur",
       "   steam wishlist [nom]                 - Affiche les jeux de la liste des souhaits d'un joueur correspondant à 'nom' qui ont une offre en cours",
@@ -106,6 +108,7 @@
       "   steam new                            - Affiche une liste des nouveautés",
       "   steam specials                       - Affiche une liste des meilleures offres",
       "   steam upcoming                       - Affiche une liste des jeux à venir",
+      "   steam players [game]         - get information about the player count of a game",
       "   steam popular                        - Affiche une liste des jeux les plus populaires en fonction du nombre de joueurs",
       "   steam userdata                       - Affiche des informations à propos du nombre de joueurs en ligne",
       "   steam removed [utilisateur]          -  Affiche le nombre de jeux de la librairie qui ont étés retiré de Steam (crédits à @TheAnthonyNL)",
@@ -255,8 +258,8 @@
     "name_unset_other": "%s n'a pas ajouté son nom d'utilisateur steam, ils peuvent saisir `steam me [username]` pour l'assigner !",
     "name_unset": "Vous n'avez pas ajouté votre nom d'utilisateur, saisissez `steam me [username]` pour l'assigner !",
     "currency_invalid": "Le symbole d'une devise ne peut pas contenir plus de 5 caractères !",
-    "currency_unsupported": "Devise non supportée, voir https://docs.openexchangerates.org/docs/supported-currencies pour avoir la liste des devises supportées",
-    "country_unsupported": "Code pays non supportée, voir https://gist.githubusercontent.com/keeguon/2310008/raw/bdc2ce1c1e3f28f9cab5b4393c7549f38361be4e/countries.json pour avoir la liste des codes pays supportés",
+    "currency_unsupported": "¬Devise non supportée, voir https://docs.openexchangerates.org/docs/supported-currencies pour avoir la liste des devises supportées",
+    "country_unsupported": "¬Code pays non supportée, voir https://gist.githubusercontent.com/keeguon/2310008/raw/bdc2ce1c1e3f28f9cab5b4393c7549f38361be4e/countries.json pour avoir la liste des codes pays supportés",
     "language": "La langue %s n'est pas supportée, les langues valables sont: %s",
     "prefix": "Type de préfixe invalide, il doit être soit 'server' soit 'channel'",
     "perm_dm": "Impossible de mettre des permissions sur un channel privé !",
