updated romanian language, added italian

--- a/languages/romanian.json
+++ b/languages/romanian.json
@@ -62,8 +62,8 @@
        "Ultima deconectare: %s",
        "      Nivel: %s"
     ],
-    "library": "Top 10 jocuri pentru %s (Total %s games):",
-    "removed": "`%s` din `%s` jocuri din libraria lui %s au fost sterse de pe Steam (%s jocuri au fost sterse in total)" -,
+    "library": "Top 10 jocuri pentru %s :",
+    "removed": "`%s` din `%s` jocuri din libraria lui %s au fost sterse de pe Steam (%s jocuri au fost sterse in total)",
     "playtime": "%s are %s pentru %s",
     "playtime_start": "%s ore inregistrate",
     "playtime_end": " (%s ore in ultimele 2 saptamani)",
@@ -75,14 +75,14 @@
     ],
     "help_other": [
       "Alte comenzi pentru SteamBot",
-      "   steam feedback [message]     - trimiteți recenzii dezvoltatorilor (inclusiv rapoartele de eroare!)",
-      "   steam invite                 - invita SteamBot pe serverul tau",
-      "   steam info                   - arata cateva informatii despre SteamBot",
-      "   steam stats                  - arata cateva statistici despre SteamBot",
-      "   steam clean [limit]          - elimină toate mesajele SteamBots din ultimele mesaje "limită",
-      "   steam prefix                 - arata prefixul pentru acest canal",
-      "   steam prefix [server|channel] \"prefix\" - seteaza prefixul pentru acest canal sau server, e.g \"steam prefix channel !\" means \"!user [user]\" instead of \"steam user [user]\"",
-      "   steam perm help              - primeste informatii despre cum sa setezi permisiile",
+      "   steam feedback [message]                      - trimiteți recenzii dezvoltatorilor (inclusiv rapoartele de eroare!)",
+      "   steam invite                                  - invita SteamBot pe serverul tau",
+      "   steam info                                    - arata cateva informatii despre SteamBot",
+      "   steam stats                                   - arata cateva statistici despre SteamBot",
+      "   steam clean [limit]                           - elimină toate mesajele SteamBots din ultimele mesaje \"limită\"",
+      "   steam prefix                                  - arata prefixul pentru acest canal",
+      "   steam prefix [server|channel] \"prefix\"      - seteaza prefixul pentru acest canal sau server, e.g \"steam prefix channel !\" means \"!user [user]\" instead of \"steam user [user]\"",
+      "   steam perm help                               - primeste informatii despre cum sa setezi permisiile",
       "   steam convert [amount] [currency] [currency]  - convertiți o monedă în alta",
       "",
       "```",
@@ -91,37 +91,36 @@
     ],
     "help": [
       "Comenzi pentru SteamBot: (daca o comanda nu functioneaza, incearca sa adaugi *, ca un utilizator de steam*)",
-      "   steam premium                - informatii despre utlizatorii premium steambot",
-      "   steam help other             - vezi o listă a altor comenzi",
-      "   steam game [name]            - cauta un joc pe steam",
-      "   steam games [name]           - lista tuturor jocurilor găsite 'name'",
-      "   steam watch help             - informații despre cumpărătorii de jocuri (doar cei premium)",
-      "   steam user [name]            - cauta un utilizator pe steam",
-      "   steam users [name]           - cauta o lista cu utilizatori 'name'",
-      "   steam avatar [name]          - primeste poza de profil a unui utilizator",
-      "   steam item [game] \"item\"     - cauta informatii despre un obiect",
-      "   steam library [name]         - cauta libraria unui utilizator",
-      "   steam wishlist [name]        - căutați jocurile într-o listă de preferințe ale unui utilizator, care sunt la reducere",
-      "   steam playtime [user] \"game\" - cauta timpul de joc al unui utilizator pentru un joc ",
-      "   steam random [user]          - selecteaza un joc random din libraria unui utilizator",
-      "   steam achiev [game] \"achiev\" - primeste informatii despre statisticile globale ale unuei realizari din joc",
-      "   steam top                    - Primeste o lista cu top jocuri vandute",
-      "   steam new                    - Primeste o lista cu noile lansari",
-      "   steam specials               - Primeste o lista cu cele mai populare reduceri",
-      "   steam upcoming               - Primeste o lista cu jocuri ce vor aparea",
-      "   steam players [game]         - Primeste informații despre numărul de jucători ai unui joc",
-      "   steam popular                - Primeste o lista cu cele mai populare jocuri in functie de numarul de jucatori",
-      "   steam userdata               - Arata cati utilizatori de steam sunt online",
-      "   steam removed [user]         -  Primeste numarul de jocuri din libraria ta care au fost sterse de pe steam (credite lui @TheAnthonyNL)",
-      "   steam me [name]              - seteaza-ti numele prestabilit (nu va mai trebui sa iti introduci numele pentru alte comenzi)",
-      "   steam name [user|mention]    - verificați numele de utilizator al unui utilizator",
-      "   steam language [language]    - seteaza-ti limba pentru mesaje",
-      "   steam server_language [language] - seteaza-ti limba prestabilita pentru server",
-      "   steam country [countrycode]  - seteaza-ti tara pentru magazin (codurile țării sunt de 2 cifre, ca GB, US sau NZ)",
+      "   steam premium                      - informatii despre utlizatorii premium steambot",
+      "   steam help other                   - vezi o listă a altor comenzi",
+      "   steam game [name]                  - cauta un joc pe steam",
+      "   steam games [name]                 - lista tuturor jocurilor găsite 'name'",
+      "   steam watch help                   - informații despre cumpărătorii de jocuri (doar cei premium)",
+      "   steam user [name]                  - cauta un utilizator pe steam",
+      "   steam users [name]                 - cauta o lista cu utilizatori 'name'",
+      "   steam avatar [name]                - primeste poza de profil a unui utilizator",
+      "   steam item [game] \"item\"         - cauta informatii despre un obiect",
+      "   steam library [name]               - cauta libraria unui utilizator",
+      "   steam wishlist [name]              - căutați jocurile într-o listă de preferințe ale unui utilizator, care sunt la reducere",
+      "   steam playtime [user] \"game\"     - cauta timpul de joc al unui utilizator pentru un joc ",
+      "   steam random [user]                - selecteaza un joc random din libraria unui utilizator",
+      "   steam achiev [game] \"achiev\"     - primeste informatii despre statisticile globale ale unuei realizari din joc",
+      "   steam top                          - Primeste o lista cu top jocuri vandute",
+      "   steam new                          - Primeste o lista cu noile lansari",
+      "   steam specials                     - Primeste o lista cu cele mai populare reduceri",
+      "   steam upcoming                     - Primeste o lista cu jocuri ce vor aparea",
+      "   steam players [game]               - Primeste informații despre numărul de jucători ai unui joc",
+      "   steam popular                      - Primeste o lista cu cele mai populare jocuri in functie de numarul de jucatori",
+      "   steam userdata                     - Arata cati utilizatori de steam sunt online",
+      "   steam removed [user]               -  Primeste numarul de jocuri din libraria ta care au fost sterse de pe steam (credite lui @TheAnthonyNL)",
+      "   steam me [name]                    - seteaza-ti numele prestabilit (nu va mai trebui sa iti introduci numele pentru alte comenzi)",
+      "   steam name [user|mention]          - verificați numele de utilizator al unui utilizator",
+      "   steam language [language]          - seteaza-ti limba pentru mesaje",
+      "   steam server_language [language]   - seteaza-ti limba prestabilita pentru server",
+      "   steam country [countrycode]        - seteaza-ti tara pentru magazin (codurile țării sunt de 2 cifre, ca GB, US sau NZ)",
       "   steam currency [currency] [symbol] - setați moneda prestabilită pentru magazin (in acest moment codul, e.x USD sau GBP, simbolul este ca $ sau £)",
       "",
-      "```",
-      "pentru mai mult ajutor detaliat viziteaza site-ul web: http://steambot.site/commands"
+      "Pentru mai mult ajutor detaliat viziteaza site-ul web: http://steambot.site/commands"
     ],
     "help_dm": "Ti-am trimis comenzile printr-un mesaj privat!",
     "info": [
@@ -201,8 +200,8 @@
     "currency": "Ați schimbat valuta implicită din %s in (%s, %s)",
     "country": "Ati schimbat tara din %s in %s",
     "feedback": "Recenzie trimisa!",
-    "language": "Seteaza-ti limba in %s",
-    "server_language": "Seteaza limba serverului in  %s",
+    "language": "Limba pe care o folosesti este %s",
+    "server_language": "Limba serverului este acum %s",
     "wishlist": "Jocuri din lista ta de dorinte care se afla la reducere:",
     "wishlist_long": "Jocuri din lista ta de dorinte care se afla la reducere: (Primele 10 doar, lista ta de dorinte este prea mare!)",
     "prefix_channel": "Seteaza prefixul canalului in %s",
@@ -227,7 +226,7 @@
       "   steam watch add message 30% rocket league -  Vei primi un mesaj pe acest canal oricand Rocket League va intra la reducere pentru 30% sau mai mult",
       "   steam watch add mention 10% the forest    -  Te va mentiona in acest canal oricand The Forest va intra la reducere pentru 10% sau mai mult"
     ],
-    "watch_removed": "S=a sters urmaritorul cu ID %s",
+    "watch_removed": "S-a sters urmaritorul cu ID %s",
     "watch_get": [
       "         ID: %s",
       "       Joc: %s",
@@ -253,7 +252,7 @@
   "errors": {
     "game": "Nu s-a găsit niciun joc care să se potrivească `%s`",
     "user": "Nu s-a găsit niciun utilizator care să se potrivească `%s`",
-    "item": Nu s-a găsit niciun obiect care să se potrivească `%s` pentru jocul  `%s`",
+    "item": "Nu s-a găsit niciun obiect care să se potrivească `%s` pentru jocul  `%s`",
     "playtime": "%s nu are un timp de joc in  %s",
     "screenshot": "Utilizatorul  `%s` nu are capturi de ecran publice",
     "achiev": "Nu s-a putut gasi o realizare numita  `%s`",
