updating languages to be in sync with what steambot actually uses. possibly removing changes

--- a/languages/english.json
+++ b/languages/english.json
@@ -16,7 +16,7 @@
     "userdata": "Must wait another %t seconds before getting user data again (%cd second cooldown)",
     "help": "Must wait another %t seconds before getting help again (%cd second cooldown)",
     "info": "Must wait another %t seconds before getting info again (%cd second cooldown)",
-    "stats": "Must wait another %t seconds before getting stats again (%cd second cooldown)",
+    "stats": "Must wait another %t seconds before getting info again (%cd second cooldown)",
     "item": "Must wait another %t seconds to search for an item (%cd second cooldown)",
     "screenshot": "Must wait another %t seconds to search for a screenshot (%cd second cooldown)",
     "achiev": "Must wait another %t seconds to see your achievements again (%cd second cooldown)",
@@ -39,6 +39,11 @@
   },
 
   "messages": {
+    "guide": [
+      "Looking for Discord help? Maybe something more?",
+      "Discord Guide, your #1 place for Discord help, support, resources, and articles.",
+      "<https://discord.guide>  <--->  https://discord.gg/Guide"
+    ],
     "game": [
           "   Title: %s",
           "    Link: %s",
@@ -67,6 +72,8 @@
     "playtime": "%s has %s for %s",
     "playtime_start": "%s hours on record",
     "playtime_end": " (%s hours in the last 2 weeks)",
+    "billboard_sub": "Subscribed to the SteamBot billboard",
+    "billboard_unsub": "Unsubscribed to the SteamBot billboard",
     "userdata": [
        "player counts in the last 48 hours:",
        "  Highest: %s",
@@ -91,10 +98,13 @@
     ],
     "help": [
       "Commands For SteamBot: (if a command isn't working, try adding *, like steam user*)",
+      "   steam billboard sub|unsub    - subscribe the channel for steam & steambot news messages",
       "   steam premium                - information about steambot premium users",
+      "   steam guide                  - information about the discord guide and where to find help",
       "   steam help other             - see a list of other miscellaneous commands",
       "   steam game [name]            - search for a game on steam",
       "   steam games [name]           - list all games found matching 'name'",
+      "   steam recommend \"game1\" \"game2\"... - get a recommendation based off the games you give",
       "   steam watch help             - information about sale watchers for games (premium only)",
       "   steam user [name]            - search for a user on steam",
       "   steam users [name]           - search for a list of users matching 'name'",
@@ -123,6 +133,64 @@
       "```",
       "for more detailed help check out our website: http://steambot.site/commands"
     ],
+    "embed_help": [
+      "for more detailed help check out our website:    http://steambot.site/commands ",
+      "If you need more help join our server:    https://discord.gg/EXss2Ek ",
+      "",
+      "Commands for SteamBot:",
+      "steam premium  information about steam premium users",
+      "steam invite  invite SteamBot to your server",
+      "steam discord  sends you an invite to the support server and a few others",
+      "steam help  sends you this list of SteamBot commands and the Discord Server invite",
+      "steam watch help  information about sale watchers for games (premium only)",
+      "steam perm help  information about how to setup SteamBot permissions",
+      "steam info  show some information about SteamBot",
+      "steam prefix  shows the prefix for the channel",
+      "steam prefix [server|channel] \"prefix\"  set the prefix for this server or channel, ",
+      "  e.g \"steam prefix channel !\" means \"!user [user]\" instead of \"steam user [user]\"",
+      "steam country [countrycode]  set your country for the store (countrycodes are 2 digit, e.g: GB, US or NZ)",
+      "steam server_country [countrycode]  set the default country on the server for the store ",
+      "steam language [language]  set your language for steam messages",
+      "steam server_language [language]  set the default language for your server",
+      "",
+      "Steam User Commands for SteamBot:",
+      "Quick note",
+      "`Steam user Billyoyo` will provide you with a standard search",
+      "`Steam user* Billyoyo` will provide you with a search by vanity url > steam 64 id > specific username search",
+      "steam me [name]  set your default username (don't have to enter your own name for other commands)",
+      "steam user [name]  search for a user on steam",
+      "steam users [name]  search for a list of users matching 'name'",
+      "steam name [user|mention]  check a user's username",
+      "steam avatar [name]  gets a user's steam avatar",
+      "steam library [name]  search for a user's library",
+      "steam wishlist [name]  search for the games in a user's wishlist which are on sale",
+      "steam playtime [user] \"game\"  search for a user's playtime for a specific game",
+      "steam random [user]  select a random game from a user's library",
+      "steam removed [user]  gets the number of games in your library that have been removed from steam (credit to @​TheAnthonyNL)",
+      "steam achiev [game] \"achiev\"  get information about the global stats for a specific games achievement",
+      "",
+      "Steam Game Commands for SteamBot:   ",
+      "steam game [name]  search for a game on steam",
+      "steam games [name]  list all games found matching 'name'",
+      "steam recommend \"game1\" \"game2\"...  get a game recommendation from those games",
+      "steam item [game] \"item\"  search for information about an item",
+      "steam top  get a list of the top selling games",
+      "steam specials  get a list of the most popular discounts",
+      "steam new  get a list of the new releases",
+      "steam upcoming  get a list of upcoming games",
+      "steam popular  get a list of the most popular games by player-count",
+      "steam players [game]  get information about the player count of a game",
+      "steam userdata  show data about the amount of steam users online",
+      "",
+      "Other Commands for SteamBot:  ",
+      "steam convert [amount] [currency] [currency]  convert a currency to another one",
+      "steam currency [currency] [symbol]  set your default currency for the market",
+      "  (currency is the code, e.g USD or GBP, symbol is like $ or £)",
+      "  **USE STEAM COUNTRY TO SET YOUR CURRENCY FOR STORE COMMANDS, CURRENCY _ONLY_ AFFECTS THE `steam item` COMMAND**",
+      "steam feedback [message]  send some feedback to the developers (including error reports!)",
+      "steam stats  show some statistics about SteamBot ",
+      "steam clean [limit]  removes all of SteamBots messages from the last 'limit' messages"
+    ],
     "help_dm": "Sent you commands in a DM!",
     "info": [
       "SteamBot was made by Billyoyo",
@@ -142,6 +210,7 @@
     "premium": [
       "SteamBot premium member rewards:",
       "  - allowed to use the 'watch' command, which notifies you when a specific game goes on sale (see 'steam watch help' for more info)",
+      "  - allowed to use the 'recommend' command, which lets you get a recommended game based on the games you give",
       "  - access to the private development channel in our server",
       "  - more premium features on the way, suggest some!",
       "",
@@ -207,7 +276,7 @@
     "wishlist_long": "Games in your wishlist which are on sale: (First 10 only, your wishlist is too long!)",
     "prefix_channel": "Set channel prefix to %s",
     "prefix_server": "Set server prefix to %s",
-	"time": ["second", "seconds", "minute", "minutes", "hour", "hours", "day", "days", "month", "months", "year", "years"],
+  "time": ["second", "seconds", "minute", "minutes", "hour", "hours", "day", "days", "month", "months", "year", "years"],
     "deal_started": "A deal for %s just started, it is now %s off!",
     "deal_increased": "The deal for %s just increased, from %s to %s off!",
     "deal_reduced": "The deal for %s just decreased, from %s to %s off!",
@@ -224,8 +293,8 @@
       "",
       "Examples of using steam watch add:",
       "   steam watch add pm 20% global offensive   -  will pm you any time CS:GO goes on sale for 20% or more",
-      "   steam watch add message 30% rocket league -  will send a message in this channel any time Rocket League goes on sale for 30% or more",
-      "   steam watch add mention 10% the forest    -  will mention you in this channel any time The Forest goes on sale for 10% or more"
+      "   steam watch add message 30% rocket league -  will send a message in this channel any time rocket league goes on sale for 30% or more",
+      "   steam watch add mention 10% The Forest    -  will mention you in this channel any time the forest goes on sale for 10% or more"
     ],
     "watch_removed": "Removed watcher with ID %s",
     "watch_get": [
@@ -261,13 +330,13 @@
     "name_unset_other": "%s hasn't set their steam username, they can use `steam me [username]` to set it!",
     "name_unset": "You haven't set your steam username, use `steam me [username]` to set it!",
     "currency_invalid": "Currency symbol cannot be longer than 5 characters!",
-    "currency_unsupported": "Unsupported currency, see https://docs.openexchangerates.org/docs/supported-currencies for a list of supported currencies",
-    "country_unsupported": "Unsupported country code, see https://gist.githubusercontent.com/keeguon/2310008/raw/bdc2ce1c1e3f28f9cab5b4393c7549f38361be4e/countries.json for a list of supported country codes",
+    "currency_unsupported": "¬Unsupported currency, see https://docs.openexchangerates.org/docs/supported-currencies for a list of supported currencies",
+    "country_unsupported": "¬Unsupported country code, see https://gist.githubusercontent.com/keeguon/2310008/raw/bdc2ce1c1e3f28f9cab5b4393c7549f38361be4e/countries.json for a list of supported country codes",
     "language": "Language %s is unsupported, Currently supported languages are: %s",
     "prefix": "Invalid prefix type, must be either 'server' or 'channel'",
     "perm_dm": "Cannot set permissions in a private channel!",
     "perm_destination": "destination for permission must be 'server' or 'channel'",
-    "perm_action": "action for permission must be 'add', 'remove', 'get' or 'clear'",
+    "perm_action": "action for permissin must be 'add', 'remove', 'get' or 'clear'",
     "perm_invalid": "The following were invalid permissions: \n%s",
     "perm_ignored": "The following permissions were ignored as they are already required: \n%s",
     "perm_ignored_removed": "The following permissions were ignored as they aren't required: \n%s",
@@ -281,12 +350,13 @@
     "watch_noid": "Couldn't find a watcher with id %s",
     "watch_find": "You don't have any watchers for %s",
     "recommend": "Failed to find recommendations for the following games (please try again in a few minutes):\n    %s",
-    "prefix_dm": "Cannot set prefix in a private channel!"
+    "prefix_dm": "Cannot set prefix in a private channel!",
+    "channel": "Couldn't find channel with id %s"
   },
 
   "exceptions": {
     "timeout": "Steam took too long to respond, please try again later.",
-    "banned": "Either you or this channel is banned from using the `%s` command!",
+    "banned": "Either you or this channel are banned from using the `%s` command!",
     "cmd_permission": "You don't have permission to use the `%s` command in this channel!",
     "permission": "SteamBot doesn't have permission to use that command!",
     "language": "SteamBot language error, language is corrupted or incomplete. Please report this using `steam feedback`",
