fix polish json

--- a/languages/polish.json
+++ b/languages/polish.json
@@ -138,7 +138,7 @@
       "jeżeli potrzebujesz więcej pomocy, dołącz do naszego serwera: https://discord.gg/EXss2Ek",
       "",
       "Komendy SteamBota:",
-      "steam premium  informacja o korzyściach członków premium",",
+      "steam premium  informacja o korzyściach członków premium,",
       "steam invite  zaproś SteamBota na swój serwer",
       "steam discord  wysyła Ci zaproszenie na serwer pomocy technicznej i kilka innych",
       "steam help  wysyła Ci listę komend SteamBota którą właśnie czytasz i zaproszenie na serwer Discord",
